# autonomous-code-reviewer-ai

./: .env.example  .gitignore  README.md  code_reviewer.db  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  factory.py  logging.py
backend/app/domain/exceptions/: agent_exceptions.py  repository_exceptions.py
backend/app/domain/models/: analysis.py  embedding.py  issue.py  language.py  parser.py  report.py  repository.py
backend/app/infrastructure/: registry.py
backend/app/infrastructure/agents/: review_agent.py
backend/app/infrastructure/api/: dependencies.py  errors.py
backend/app/infrastructure/code_parser/: parser.py
backend/app/infrastructure/database/: models.py  repository.py
backend/app/infrastructure/language_detector/: detector.py
backend/app/infrastructure/llm/: __init__.py  claude.py  groq.py
backend/app/infrastructure/metrics/: prometheus_adapter.py
backend/app/infrastructure/queue/: celery_adapter.py  celery_config.py  celery_tasks.py
backend/app/infrastructure/rag/: chroma_store.py  embedding_generator.py  embedding_provider.py  embedding_service.py  rag_engine.py  sentence_transformer_provider.py
backend/app/infrastructure/report/: generator.py
backend/app/infrastructure/repository_loader/: git_loader.py
backend/app/use_cases/: orchestrator.py
backend/app/use_cases/analysis/: runner.py
backend/app/use_cases/interfaces/: agent_ports.py  db_port.py  detector_port.py  embedding_port.py  job_queue_port.py  llm_port.py  (+6 more)
(+123 files in other folders)
